--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Gnuk - software for GPG USB Token
 
-							    Version 0.1
+							    Version 0.2
 							     2010-09-10
 						           Niibe Yutaka
 				      Free Software Initiative of Japan
@@ -54,8 +54,8 @@ Targets
 
 We use Olimex STM32-H103 board.
 
-I think that it runs on Olimex STM32-P103, STBee, or STBee mini too.
-Besides, we are porting it to STM32 Primer 2.
+I think that it could run on Olimex STM32-P103, STBee, or STBee mini
+too.  Besides, we are porting it to STM32 Primer 2.
 
 
 Souce code
@@ -93,9 +93,16 @@ Gnuk is distributed with external source code.
   STM32F10x USB Full Speed Device Library (USB-FS-Device_Lib)
   is a STM32F10x library for USB functionality.
 
-  I took Libraries/STM32_USB-FS-Device_Driver and a part of
-  Project/ in STM32_USB-FS-Device_Lib distribution.
+  I took Libraries/STM32_USB-FS-Device_Driver and 
+  Project/Virtual_COM_Port in STM32_USB-FS-Device_Lib distribution.
   See http://www.st.com for detail.
+
+
+Host Requirements
+=================
+
+For GNU/Linux, libccid version >= 1.3.11 is required.
+libccid version == 1.3.9 is known not working well by the issue [r4235].
 
 
 How to compile
@@ -182,7 +189,6 @@ For libccid, we need following change:
  		<string>Gemplus GemPC Twin</string>
  		<string>Gemplus GemPC Key</string>
 ------------------
-
 
 Then, try following to see Gnuk runs:
 
