--- a/README
+++ b/README
@@ -241,8 +241,8 @@ Please see: http://www.fsij.org/gnuk/
 Your Contributions
 ==================
 
-FSIJ is welcome to your contributions.  Please assign your copyright
-to FSIJ.
+FSIJ welcomes your contributions.  Please assign your copyright
+to FSIJ, if possible.
 
 
 Development history
