--- a/THANKS
+++ b/THANKS
@@ -5,6 +5,7 @@ Gnuk was originally written by NIIBE Yutaka.  People contributed by
 encouraging the development, testing the implementation, suggesting
 improvements, or fixing bugs.  Here is a list of those people.
 
+Hironobu SUZUKI		hironobu@h2np.net
 Jan Sur			jan@suhr.info
 Kaz Kojima		kkojima@rr.iij4u.or.jp
 NAGAMI Takeshi		nagami-takeshi@aist.go.jp
