--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-10-28  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/gnuk.h (OPENPGP_CARD_INITIAL_PW3): New.
+	* src/ac.c (verify_admin_0): Use OPENPGP_CARD_INITIAL_PW3.
+
 2010-10-23  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* Version 0.3.
