--- a/THANKS
+++ b/THANKS
@@ -8,6 +8,7 @@ improvements, or fixing bugs.  Here is a list of those people.
 Hironobu SUZUKI		hironobu@h2np.net
 Jan Sur			jan@suhr.info
 Kaz Kojima		kkojima@rr.iij4u.or.jp
+MATSUU Takuto		matsuu@gentoo.org
 NAGAMI Takeshi		nagami-takeshi@aist.go.jp
 Shane Coughlan		scoughlan@openinventionnetwork.com
 Werner Koch		wk@gnupg.org
