--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-11-05  NIIBE Yutaka  <gniibe@fsij.org>
 
+	Bug fixes.
+	* src/openpgp-do.c (gpg_do_write_prvkey): compare with != operator.
+	* src/ac.c (verify_admin_0): Don't hardcode 6, but use strlen.
+
 	* src/flash.c, src/gnuk.ld.in: Rename "Flash DO Pool" to "Flash
 	Data Pool", because it's not only DO.
 	* src/gnuk.h, src/opengpg-do.c: Cleanup.
